keep PWD in new window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,10 @@ set -g prefix C-a
 
 bind-key '"' split-window -v -c '#{pane_current_path}'
 bind-key '|' split-window -h -c '#{pane_current_path}'
+bind-key 'c' new-window -c '#{pane_current_path}'
 
 # Reload tmux config
-bind r source-file ~/.tmux.conf
+bind-key 'r' source-file ~/.tmux.conf
 
 # THEME
 set -g status-bg black
