--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,22 @@
 unbind C-b
 set -g prefix C-a
-
+set -g default-terminal "screen-256color"
+set-option -g mouse on
+set -g set-clipboard external
 bind-key '"' split-window -v -c '#{pane_current_path}'
 bind-key '|' split-window -h -c '#{pane_current_path}'
 bind-key 'c' new-window -c '#{pane_current_path}'
+bind-key 'C-l' resize-pane -R 5
+bind-key 'C-h' resize-pane -L 5
+bind-key 'C-j' resize-pane -U 5
+bind-key 'C-k' resize-pane -D 5
 
 # Reload tmux config
 bind-key 'r' source-file ~/.tmux.conf
 
 # THEME
-set -g status-bg black
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
+set -g status-style bg=black,fg=white
+set -g window-status-current-style bg=white,fg=black,bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami)  '
